; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_tftp.c_show_error.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_tftp.c_show_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"Not defined\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"File not found\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"Access violation\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"Disk full or allocation exceeded\00", align 1
@.str.4 = private unnamed_addr constant [23 x i8] c"Illegal TFTP operation\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"Unknown transfer ID\00", align 1
@.str.6 = private unnamed_addr constant [20 x i8] c"File already exists\00", align 1
@.str.7 = private unnamed_addr constant [13 x i8] c"No such user\00", align 1
@.str.8 = private unnamed_addr constant [25 x i8] c"Option negotiation error\00", align 1
@.str.9 = private unnamed_addr constant [15 x i8] c"Bad error code\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @show_error(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %14 [
    i32 129, label %5
    i32 133, label %6
    i32 136, label %7
    i32 135, label %8
    i32 132, label %9
    i32 128, label %10
    i32 134, label %11
    i32 131, label %12
    i32 130, label %13
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %15

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %15

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %15

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %15

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %15

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %15

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %15

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %15

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %15

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %15

15:                                               ; preds = %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
